feat: Import Assistant
- move document loading so it can be reused
- begin adding assistant ui

--- a/import-bulk.html
+++ b/import-bulk.html
@@ -106,7 +106,7 @@
                         <div class="page-preview hidden">
                             <sp-divider size="s"></sp-divider>
                             <h3>Page preview</h3>
-                            <iframe id="import-content-frame" frameborder="0"></iframe>
+                            <iframe id="import-content-frame"></iframe>
                         </div>
                     </div>
                     <div class="section-col">
