--- a/crawl.html
+++ b/crawl.html
@@ -9,14 +9,12 @@
     <link rel="stylesheet" href="./css/crawl/crawl.css" />
 
     <script src="./js/shared/log.js"></script>
-    <script src="./js/dist/spectrum-web-components.js"></script>
-
+    <script src="./js/dist/spectrum-web-components.js" async></script>
     <script src="./js/libs/vendors/exceljs/exceljs.min.js"></script>
-
     <script src="./js/crawl/crawl.ui.js" type="module"></script>
 </head>
 
-<body class="tool">
+<body class="tool loading">
     <sp-theme color="dark" scale="medium">
         <!-- MAIN CONTENT -->
         <main>
@@ -89,6 +87,7 @@
         </main>
         <div id="alert-container"></div>
     </sp-theme>
+    <script src="./js/swc_loader.js" type="module"></script>
 </body>
 
 </html>
