--- a/import-bulk.html
+++ b/import-bulk.html
@@ -9,24 +9,32 @@
     <link rel="stylesheet" href="./css/import/import.css" />
 
     <script src="./js/shared/log.js"></script>
-    <script src="./js/dist/spectrum-web-components.js"></script>
-
+    <script src="./js/dist/spectrum-web-components.js" async></script>
+    <script type="importmap">
+        {
+          "imports": {
+            "preact": "https://esm.sh/preact@10.23.1",
+            "preact/": "https://esm.sh/preact@10.23.1/",
+            "@preact/signals": "https://esm.sh/@preact/signals@1.3.0?external=preact",
+            "htm/preact": "https://esm.sh/htm@3.1.1/preact?external=preact"
+          }
+        }
+    </script>
     <script src="./js/libs/vendors/babel-polyfill/polyfill.js"></script>
     <script src="./js/libs/vendors/exceljs/exceljs.min.js"></script>
     <script src="./js/dist/helix-importer.js"></script>
-
     <script src="./js/import/import.ui.js" type="module"></script>
 </head>
 
-<body class="tool">
+<body class="tool loading">
     <sp-theme color="dark" scale="medium">
         <!-- MAIN CONTENT -->
         <main>
             <!-- IMPORT BULK SECTION -->
             <section class="import import-bulk">
                 <div class="section-title">
-                    <h2>Import - Bulk</h2>
-                    <p>Use your import.js to bulk import a set of pages with the Import - Bulk.</p>
+                    <h2>Bulk Import</h2>
+                    <p>Use your import script to bulk import a list of pages.</p>
                     <sp-divider size="l"></sp-divider>
                 </div>
                 <div class="section-cols">
@@ -124,6 +132,7 @@
         </main>
         <div id="alert-container"></div>
     </sp-theme>
+    <script src="./js/swc_loader.js" type="module"></script>
 </body>
 
 </html>
