--- a/index.html
+++ b/index.html
@@ -8,34 +8,33 @@
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <link rel="stylesheet" href="./css/styles.css" />
 
-    <script src="./js/dist/spectrum-web-components.js"></script>
+    <script src="./js/dist/spectrum-web-components.js" async></script>
     <script src="./js/topnav.js" type="module"></script>
     <script src="./js/sidenav.js" type="module"></script>
 </head>
 
-<body class="parent">
+<body class="parent loading">
     <sp-theme color="dark" scale="medium">
         <!-- TOP NAV CONTENT -->
         <sp-top-nav size="l">
             <header><a href="#"><h1>AEM Importer</h1></a></header>
-            <div style="display: flex; margin-inline-start: auto;">
-                <sp-action-group size="m" placement="bottom-end">
+            <div style="display: flex; gap: 12px; margin-inline-start: auto;">
+                <sp-action-group size="m">
                     <sp-action-button id="toggle-theme" label="Toggle theme" quiet>
                         <sp-icon-contrast slot="icon"></sp-icon-contrast>
                     </sp-action-button>
+                    <sp-button>Login</sp-button>
                 </sp-action-group>
                 <sp-action-menu
                         label="Account"
                         placement="bottom-end"
                         quiet
                 >
-                    <sp-menu>
-                        <sp-menu-item>Account Settings</sp-menu-item>
-                        <sp-menu-item>My Profile</sp-menu-item>
-                        <sp-menu-divider></sp-menu-divider>
-                        <sp-menu-item>Help</sp-menu-item>
-                        <sp-menu-item>Sign Out</sp-menu-item>
-                    </sp-menu>
+                    <sp-menu-item>Account Settings</sp-menu-item>
+                    <sp-menu-item>My Profile</sp-menu-item>
+                    <sp-menu-divider></sp-menu-divider>
+                    <sp-menu-item>Help</sp-menu-item>
+                    <sp-menu-item>Sign Out</sp-menu-item>
                 </sp-action-menu>
             </div>
         </sp-top-nav>
@@ -67,6 +66,7 @@
             <div id="alert-container"></div>
         </div>
     </sp-theme>
+    <script src="./js/swc_loader.js" type="module"></script>
 </body>
 
 </html>
