--- a/import.html
+++ b/import.html
@@ -41,7 +41,7 @@
             <section class="import">
                 <div class="section-title">
                     <h2>Workbench</h2>
-                    <p>Prepare your import script for migrating your site content.</p>
+                    <p>Prepare an import script for migrating your site content.</p>
                     <sp-divider size="l"></sp-divider>
                 </div>
                 <div class="section-cols">
