feat: Import Assistant
- fix contextual help width
- add help link to action menu

--- a/import.html
+++ b/import.html
@@ -97,7 +97,7 @@
                                             <sp-icon-magic-wand slot="icon"></sp-icon-magic-wand>
                                             Assistant
                                         </sp-button>
-                                        <sp-contextual-help>
+                                        <sp-contextual-help placement="bottom-start">
                                             <h2 slot="heading">Import Assistant</h2>
                                             <p>
                                                 Use the import assistant to help with the automatic generation of an import script.
