--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <sp-menu-item>Account Settings</sp-menu-item>
                     <sp-menu-item>My Profile</sp-menu-item>
                     <sp-menu-divider></sp-menu-divider>
-                    <sp-menu-item>Help</sp-menu-item>
+                    <sp-menu-item value="help">Help</sp-menu-item>
                     <sp-menu-item>Sign Out</sp-menu-item>
                 </sp-action-menu>
             </div>
