--- a/index.html
+++ b/index.html
@@ -5,37 +5,45 @@
 <head>
     <meta charset="utf-8" />
     <title>AEM Importer</title>
-    <link rel="icon" type="image/x-icon" href="./favicon.ico">
+    <link rel="icon" type="image/svg+xml" href="./favicon.svg">
     <link rel="stylesheet" href="./css/styles.css" />
 
+    <script type="importmap">
+        {
+          "imports": {
+            "preact": "https://esm.sh/preact@10.23.1",
+            "preact/": "https://esm.sh/preact@10.23.1/",
+            "@preact/signals": "https://esm.sh/@preact/signals@1.3.0?external=preact",
+            "htm/preact": "https://esm.sh/htm@3.1.1/preact?external=preact"
+          }
+        }
+    </script>
     <script src="./js/dist/spectrum-web-components.js" async></script>
-    <script src="./js/topnav.js" type="module"></script>
-    <script src="./js/sidenav.js" type="module"></script>
+    <script src="./js/shell.ui.js" type="module"></script>
 </head>
 
 <body class="parent loading">
     <sp-theme color="dark" scale="medium">
         <!-- TOP NAV CONTENT -->
         <sp-top-nav size="l">
-            <header><a href="#"><h1>AEM Importer</h1></a></header>
-            <div style="display: flex; gap: 12px; margin-inline-start: auto;">
+            <header>
+                <a href="#">
+                    <i>
+                        <svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="-5 -5 250 244" width="32" height="32" y="244">
+                            <rect height="234" rx="42.5" width="240" fill="#fff"/>
+                            <path d="M186.617 175.95h-28.506a6.243 6.243 0 0 1-5.847-3.769l-30.947-72.359a1.364 1.364 0 0 0-2.611-.034L99.42 145.731a1.635 1.635 0 0 0 1.506 2.269h21.2a3.27 3.27 0 0 1 3.01 1.994l9.281 20.655a3.812 3.812 0 0 1-3.507 5.301H53.734a3.518 3.518 0 0 1-3.213-4.904l49.09-116.902A6.639 6.639 0 0 1 105.843 50h28.314a6.628 6.628 0 0 1 6.232 4.144l49.43 116.902a3.517 3.517 0 0 1-3.202 4.904z" data-name="256" fill="#fa0f00"/>
+                        </svg>
+                    </i>
+                    <h1>AEM Importer</h1>
+                </a>
+            </header>
+            <div>
                 <sp-action-group size="m">
                     <sp-action-button id="toggle-theme" label="Toggle theme" quiet>
                         <sp-icon-contrast slot="icon"></sp-icon-contrast>
                     </sp-action-button>
-                    <sp-button>Login</sp-button>
                 </sp-action-group>
-                <sp-action-menu
-                        label="Account"
-                        placement="bottom-end"
-                        quiet
-                >
-                    <sp-menu-item>Account Settings</sp-menu-item>
-                    <sp-menu-item>My Profile</sp-menu-item>
-                    <sp-menu-divider></sp-menu-divider>
-                    <sp-menu-item value="help">Help</sp-menu-item>
-                    <sp-menu-item>Sign Out</sp-menu-item>
-                </sp-action-menu>
+                <div id="authentication-container"></div>
             </div>
         </sp-top-nav>
         <div class="main-content">
